--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,14 @@
       "#/*": ["./types/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"]
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "types/env.d.ts",
+    "types/**/*.d.ts",
+    "types/**/*.ts"
+  ],
+  "references": [{ "path": "./tsconfig.node.json" }]
 }
