--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -2,7 +2,14 @@
   "compilerOptions": {
     "composite": true,
     "module": "esnext",
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true
   },
-  "include": ["vite.config.ts", ".vite/**/*.ts", "mock/**/*.ts"]
+  "include": [
+    "vite.config.ts",
+    "vite/**/*.ts",
+    "types/**/*.d.ts",
+    "types/**/*.ts",
+    "mock/**/*.ts"
+  ]
 }
