--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "vue": "^3.2.25",
