--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@vee-validate/i18n": "^4.5.7",
     "@vee-validate/rules": "^4.5.7",
+    "ant-design-vue": "^2.2.8",
     "axios": "^0.26.0",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
