feat: 分析页布局，添加echarts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "#/*": ["./types/*"]
+      "#/*": ["./types/*"],
+      "@/assets": ["src/assets"],
+      "@/api": ["src/api"]
     }
   },
   "include": [
