--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vee-validate/rules": "^4.5.7",
     "ant-design-vue": "^2.2.8",
     "axios": "^0.26.0",
+    "echarts": "^5.3.0",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "vee-validate": "^4.5.8",
