feat: 增加手动注册路由，添加pinia

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
-      "#/*": ["./types/*"],
-      "@/assets": ["src/assets"],
-      "@/api": ["src/api"]
+      "#/*": ["./types/*"]
+      // "@/assets": ["src/assets"],
+      // "@/apis": ["src/apis"]
     }
   },
   "include": [
