--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "echarts": "^5.3.0",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
+    "pinia": "^2.0.11",
     "vee-validate": "^4.5.8",
     "vue": "^3.2.25",
     "vue-router": "4",
