--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,10 @@
     "src/**/*.vue",
     "types/**/*.d.ts",
     "types/**/*.ts",
-    "apis/**/*.ts"
-  ],
-  "references": [{ "path": "./tsconfig.node.json" }]
+    "apis/**/*.ts",
+    "vite.config.ts",
+    "vite/**/*.ts",
+    "mock/**/*.ts"
+  ]
+  // "references": [{ "path": "./tsconfig.node.json" }]
 }
