--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ant-design/icons-vue": "^6.1.0",
     "@vee-validate/i18n": "^4.5.7",
     "@vee-validate/rules": "^4.5.7",
+    "@vueuse/core": "^8.5.0",
     "ant-design-vue": "^2.2.8",
     "axios": "^0.26.0",
     "echarts": "^5.3.0",
